@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.12 2005-02-15 18:20:57 cmatsuoka Exp $
+$Id: ChangeLog,v 1.13 2005-02-20 13:38:52 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -8,7 +8,8 @@ Stable versions
 	- added MO3 unpacking support
 	- added file detection to the XMMS plugin
 	- added Beep Media Player support to the XMMS plugin
-	- added Epic Megagames PSM module loader
+	- added Epic Megagames PSM module support
+	- added DSMI/DMP Advanced Module Format support
 	- added support to Ultimate Soundtracker modules
 	- fixed recursive decrunching of module files
 	- fixed QNX6 portability issues (by Mike Gorchak)
